# artemis

./: .gitignore  .gitmodules  Cargo.toml  README.md  claude.md  find_optimal.py  graph.dot  lenet_cifar10_no_softmax.tflite  lenet_medium_cifar10_no_softmax.tflite  mnist_model_no_softmax.tflite  output.csv  rust-toolchain.toml
benches/: benchmark_ipa_add.rs  (+9 more)
doe-suite-config/: .envrc  .gitignore  pyproject.toml
doe-suite-config/designs/: apollo-large.yml  apollo-med.yml  apollo-small.yml  cplink-gpt2.yml  cplink-large_bn.yml  cplink-med.yml  cplink-small.yml  cplink.yml  cplink_fast-large.yml  cplink_fast-med.yml  cplink_fast-small.yml  diffusion.yml  mnist-pedersen.yml  model-diffusion.yml  model-gpt2.yml  model-mid.yml  model-mobilenet.yml  model-small-pedersen.yml  model-small-poly.yml  model-small.yml  model-vgg.yml  nocom-large-ipa.yml  nocom-large.yml  nocom-med-ipa.yml  nocom-med.yml  nocom-small-ipa.yml  nocom-small.yml  nocom.yml  poly-ip-kzg.yml  poly-ip-large.yml  poly-ip-large_ipa.yml  poly-ip-med.yml  poly-ip-med_ipa.yml  poly-ip-small.yml  poly-ip-small_ipa.yml  poly-ipa.yml  poly-kzg.yml  poly-large-ipa.yml  poly-large.yml  poly-med-ipa.yml  (+22 more)
doe-suite-config/designs/design_vars/: general.yml
doe-suite-config/does_etl_custom/etl/: colcross.py  custom.py
doe-suite-config/group_vars/all/: main.yml
doe-suite-config/group_vars/large/: main.yml
doe-suite-config/inventory/: custom.yml
doe-suite-config/super_etl/: debug_etl.ipynb  new_plots.yml  paper_plots.yml  poly_plots.yml  poly_plots_debug.yml  rel_plots.yml  split_plots.yml  test_plots.yml
(+387 files in other folders)
